--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,12 @@
   <!-- set global properties for this build -->
   <property name="src" location="src"/>
   <property name="build" location="build"/>
-  <property name="dist"  location="dist"/>
+
+
+  <path id="classpath">
+    <fileset dir="lib/run" includes="*.jar"/>
+  </path>
+
 
   <target name="init">
     <!-- Create the time stamp -->
@@ -17,7 +22,7 @@
   <target name="compile" depends="init"
         description="compile the source " >
     <!-- Compile the java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}"/>
+    <javac srcdir="${src}" destdir="${build}" classpathref="classpath"/>
   </target>
 
   <target name="dist" depends="compile"
