--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="guisim">
   <description>
-        simple example build file
+        Guisim build file.
   </description>
   <!-- set global properties for this build -->
   <property name="src" location="src"/>
@@ -10,7 +10,6 @@
   <path id="classpath">
     <fileset dir="lib/run" includes="*.jar"/>
   </path>
-
 
   <target name="init">
     <!-- Create the time stamp -->
@@ -29,6 +28,9 @@
         description="generate the distribution" >
     <!-- Create the distribution directory -->
     <mkdir dir="${dist}/lib"/>
+    <copy todir="${dist}/lib">
+      <fileset dir="lib/run"/>
+    </copy>
 
     <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
     <jar jarfile="${dist}/lib/MyProject-${DSTAMP}.jar" basedir="${build}"/>
