--- a/build.xml
+++ b/build.xml
@@ -33,11 +33,17 @@
       <fileset dir="lib/run"/>
     </copy>
     <mkdir dir="${dist}/lib/src/web"/>
+
     <copy todir="${dist}/lib/src/web">
       <fileset dir="src/web/gui"/>
     </copy>
+    <!--
     <copy todir="${dist}">
       <fileset file="guisim.bat"/>
+    </copy>
+    -->
+    <copy todir="${dist}/lib/">
+      <fileset file="guisimLIB.bat"/>
     </copy>
     <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
     <jar jarfile="${dist}/lib/GUISIM.jar" basedir="${build}"/>
