--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,7 @@
       <fileset file="guisim.bat"/>
     </copy>
     -->
-    <copy todir="${dist}/lib/">
+    <copy todir="${dist}/lib">
       <fileset file="guisimLIB.bat"/>
     </copy>
     <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
