--- a/build.xml
+++ b/build.xml
@@ -43,6 +43,7 @@
     </copy>
     -->
     <copy todir="${dist}/lib">
+      <fileset file="test.txt"/>
       <fileset file="guisimLIB.bat"/>
     </copy>
     <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
