--- a/build.xml
+++ b/build.xml
@@ -39,7 +39,8 @@
     </copy>
     <!--
     <copy todir="${dist}">
-      <fileset file="guisim.bat"/>
+      <fileset file="guisim32.bat"/>
+      <fileset file="guisim64.bat"/>
     </copy>
     -->
     <copy todir="${dist}/lib">
