--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
   <target name="compile" depends="init"
         description="compile the source " >
     <!-- Compile the java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}" classpathref="classpath"/>
+    <javac srcdir="${src}" destdir="${build}" classpathref="classpath" source="1.5" target="1.5"/>
   </target>
 
   <target name="dist" depends="compile"
